--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
+opencv-python==4.10.0.84
 packaging==24.1
 pillow==10.4.0
 pytesseract==0.3.10
@@ -32,6 +33,8 @@ setuptools==72.0.0
 sympy==1.13.1
 tokenizers==0.19.1
 torch==2.4.0
+torchaudio==2.4.0
+torchvision==0.19.0
 tqdm==4.66.4
 transformers==4.43.3
 triton==3.0.0
