--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
 decorator==5.1.1
+docx2pdf==0.1.8
 easyocr==1.7.1
 executing==2.0.1
 filelock==3.15.4
@@ -36,23 +37,12 @@ mpmath==1.3.0
 networkx==3.3
 ninja==1.11.1.1
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.82
-nvidia-nvtx-cu12==12.1.105
 opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
+pdf2image==1.17.0
 pexpect==4.9.0
 pillow==10.4.0
 prompt_toolkit==3.0.47
